# RSE_Assessment

./: README.md
RSE_ws/src/mybot_pkg/: CMakeLists.txt
RSE_ws/src/mybot_pkg/launch/: gazebo.launch  myrobot.launch  myrobot_mapping.launch  myrobot_navigation.launch
RSE_ws/src/mybot_pkg/models/house_1/materials/scripts/: house_1.material
RSE_ws/src/pointcloud_to_laserscan/launch/: convert_node.launch  pointcloud_to_laserscan.launch
RSE_ws/src/robot_web_gui/: flask_app.py
RSE_ws/src/robot_web_gui/static/: database.db  newmap.pgm  newmap.yaml
RSE_ws/src/robot_web_gui/static/js/: index.js  mapping.js  nav2d.js  navigation.js
RSE_ws/src/scripts/: localization_nd_navigation.bash
RSE_ws/src/scripts/LaneDetection/: lane_detection.bash
RSE_ws/src/scripts/MCL_offline/: MCL_localization.bash
RSE_ws/src/scripts/Odometry_publisher/: odometry_publisher.bash
RSE_ws/src/scripts/offline_localization/: 1710352000.pcd  offline_localization.bash
RSE_ws/src/scripts/standalone_navigation/: localization_nd_navigation.bash  mapping_scripts.bash  startup_scripts.bash
RSE_ws/src/scripts/web_gui/: startup_scripts.bash
RSE_ws/src/steer_bot/steer_bot_gazebo/launch/: steer_bot_sim.launch
RSE_ws/src/steer_bot_navigation/: CMakeLists.txt  package.xml
RSE_ws/src/steer_bot_navigation/config/robot/: costmap_common.yaml
RSE_ws/src/steer_bot_navigation/include/steer_bot_navigation/offline_localization_icp/: laser_utils.h  matrix_utils.h  offline_localization_icp.h
RSE_ws/src/steer_bot_navigation/launch/LaserICP/:  locip.launch  icp.yaml  offlineICP.launch  tf_map.launch
RSE_ws/src/steer_bot_navigation/launch/odometry_ackermann/: odom_config.yaml  odometry_publisher.launch
RSE_ws/src/steer_bot_navigation/launch/pf/: MCL_localizer.launch  map_server.launch
RSE_ws/src/steer_bot_navigation/launch/robotutils/: cmd_vel_remapper.launch  map_publisher.launch  mapper.yaml
RSE_ws/src/steer_bot_navigation/launch/standalone_navigation/: amcl.launch  loc_and_mapping.launch  move_base_huskyy.launch  move_base_testses.launch
RSE_ws/src/steer_bot_navigation/maps/: map_city.pgm  map_city.yaml
RSE_ws/src/steer_bot_navigation/src/: cmdvelocityRemapper.cpp
RSE_ws/src/steer_bot_navigation/src/lane_navigation/: LaneDetection.py
RSE_ws/src/steer_bot_navigation/src/odometry_ackermann/: odometry_ackermann.cpp
RSE_ws/src/steer_bot_navigation/src/offline_localization_icp/: laser_scan_pcl_lib.cpp  offline_localization_icp.cpp
RSE_ws/src/steer_bot_navigation/src/pf/: match_estimator.py  particle_filter.py
